[gd_scene load_steps=24 format=3 uid="uid://b6fte4p7e3reo"]

[ext_resource type="Script" path="res://enemies/enemy_character.gd" id="1_x2nl5"]
[ext_resource type="Texture2D" uid="uid://ds1mxynmcc0g0" path="res://enemies/baddie.png" id="2_j327w"]
[ext_resource type="AudioStream" uid="uid://dnu0heqxoawj2" path="res://audio/jump.wav" id="3_mn6vu"]
[ext_resource type="Script" path="res://state_machines/state_machine.gd" id="4_3ysxb"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_idle.gd" id="5_68x32"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_patrol.gd" id="6_4v7ug"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_follow.gd" id="7_lg3vw"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_stunned.gd" id="8_0rvko"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_grabbed.gd" id="9_vm2be"]
[ext_resource type="Script" path="res://state_machines/enemy_states/enemy_thrown.gd" id="10_7uuk0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p8xfe"]
radius = 0.35

[sub_resource type="Animation" id="Animation_xs1r2"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_twutm"]
resource_name = "dash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_u0t83"]
resource_name = "grabbed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="Animation" id="Animation_rpcuv"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_uvqme"]
resource_name = "jump"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_iv5ja"]
resource_name = "layer_jump_backward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 26]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_change_layer"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_mn6vu")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_8u2y5"]
resource_name = "layer_jump_forward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 24]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attempt_change_layer"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_mn6vu")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_0eber"]
resource_name = "roll"
length = 0.25
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [28, 29, 30]
}

[sub_resource type="Animation" id="Animation_7g5oc"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_arnvo"]
resource_name = "sit"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_hdfqs"]
resource_name = "stunned"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wllxu"]
_data = {
"RESET": SubResource("Animation_xs1r2"),
"dash": SubResource("Animation_twutm"),
"grabbed": SubResource("Animation_u0t83"),
"idle": SubResource("Animation_rpcuv"),
"jump": SubResource("Animation_uvqme"),
"layer_jump_backward": SubResource("Animation_iv5ja"),
"layer_jump_forward": SubResource("Animation_8u2y5"),
"roll": SubResource("Animation_0eber"),
"run": SubResource("Animation_7g5oc"),
"sit": SubResource("Animation_arnvo"),
"stunned": SubResource("Animation_hdfqs")
}

[node name="EnemyCharacter" type="CharacterBody3D" node_paths=PackedStringArray("state_machine") groups=["enemy"]]
script = ExtResource("1_x2nl5")
state_machine = NodePath("StateMachine")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("SphereShape3D_p8xfe")

[node name="Sprite3D" type="Sprite3D" parent="."]
pixel_size = 0.05
billboard = 1
shaded = true
texture_filter = 4
texture = ExtResource("2_j327w")
hframes = 4
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wllxu")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CurrentJumpAbility" type="Node" parent="."]

[node name="CurrentMobilityAbility" type="Node" parent="."]

[node name="CurrentAttackAbility" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_3ysxb")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_68x32")
enemy = NodePath("../..")
detect_range = 2.0

[node name="Patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_4v7ug")
patrol_time = 3.0
enemy = NodePath("../..")
detect_range = 2.0

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_lg3vw")
enemy = NodePath("../..")
detect_range = 2.0

[node name="Stunned" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_0rvko")
enemy = NodePath("../..")

[node name="Grabbed" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_vm2be")
enemy = NodePath("../..")

[node name="Thrown" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_7uuk0")
enemy = NodePath("../..")
